Cleaned the markup; added section el

--- a/index.html
+++ b/index.html
@@ -54,12 +54,22 @@
     </nav>
     <main id="main" class="grid-main t-main">
       <article class="t-main-content">
-      <h2 class="t-heading">Section Heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione veritatis mollitia omnis dolore numquam rerum nemo quas iusto, laborum dolores cupiditate unde cum est alias dignissimos eveniet voluptatem maiores, accusamus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel molestiae alias dolorem repellendus quis eligendi expedita iure harum officiis, recusandae tenetur suscipit dolores debitis accusantium est provident omnis laborum porro!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit laborum fugiat reiciendis, itaque doloribus atque ex placeat minima ad rem, quam dicta! Perferendis provident voluptatem possimus, harum quae optio, illo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic qui, eos. Velit voluptatibus corporis eos, ipsum culpa nihil id, obcaecati sint, repudiandae vitae quia inventore. Impedit autem, dolore corporis aliquam!</p>
-      <h3 class="t-subheading">Subheading</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae asperiores temporibus id velit quia maxime possimus, vel consectetur porro, laborum nostrum hic maiores, ipsam cumque. Nostrum totam sequi quam consequatur!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error odit id quo, quis in maiores! Ea, iusto autem porro consectetur voluptates, obcaecati, cupiditate molestiae nulla tempore possimus laboriosam distinctio nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex rerum, doloribus obcaecati officia consectetur maxime dignissimos repellat nihil in laudantium quidem! Praesentium voluptas neque distinctio officiis ea. Fugit voluptatum, excepturi?</p>
+        <section>
+          <h2 class="t-heading">Section Heading</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione veritatis mollitia omnis dolore numquam rerum nemo quas iusto, laborum dolores cupiditate unde cum est alias dignissimos eveniet voluptatem maiores, accusamus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel molestiae alias dolorem repellendus quis eligendi expedita iure harum officiis, recusandae tenetur suscipit dolores debitis accusantium est provident omnis laborum porro!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit laborum fugiat reiciendis, itaque doloribus atque ex placeat minima ad rem, quam dicta! Perferendis provident voluptatem possimus, harum quae optio, illo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic qui, eos. Velit voluptatibus corporis eos, ipsum culpa nihil id, obcaecati sint, repudiandae vitae quia inventore. Impedit autem, dolore corporis aliquam!
+          </p>
+          <h3 class="t-subheading">Subheading</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae asperiores temporibus id velit quia maxime possimus, vel consectetur porro, laborum nostrum hic maiores, ipsam cumque. Nostrum totam sequi quam consequatur!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error odit id quo, quis in maiores! Ea, iusto autem porro consectetur voluptates, obcaecati, cupiditate molestiae nulla tempore possimus laboriosam distinctio nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex rerum, doloribus obcaecati officia consectetur maxime dignissimos repellat nihil in laudantium quidem! Praesentium voluptas neque distinctio officiis ea. Fugit voluptatum, excepturi?
+          </p>
+        </section>
       </article>
     </main>
     <aside class="grid-right t-right">
